--- a/libs/waterfall/src/lib/components/contracts-form/contracts-form.component.scss
+++ b/libs/waterfall/src/lib/components/contracts-form/contracts-form.component.scss
@@ -12,6 +12,7 @@ section {
 
   article {
     display: flex;
+    gap: 42px;
     
     &.header {
       align-items: center;
@@ -19,6 +20,96 @@ section {
 
       h2, button {
         margin: 0;
+      }
+    }
+
+    ul {
+      width: 50%;
+      min-width: 600px;
+      border-top: solid 1px var(--foreground-divider);
+
+      li {
+        display: flex;
+        padding-left: 24px;
+        align-items: center;
+        justify-content: space-between;
+        border: solid 1px var(--foreground-divider);
+        border-top: none;
+
+        &:hover, &.selected {
+          cursor: pointer;
+          background-color: var(--dashboard-cta);
+
+          button {
+            color: var(--primary);
+  
+            mat-icon {
+              color: var(--primary);
+            }
+          }
+        }
+
+        p {
+          margin: 0;
+          font-weight: 600;
+        }
+      }
+    }
+
+    bf-card-modal {
+      width: 50%;
+      box-shadow: -5px 0px 18px 0px rgba(0, 0, 0, 0.35);
+
+      header {
+        gap: 15px;
+        padding: 32px;
+        display: flex;
+        align-items: center;
+        border-bottom: solid 2px var(--foreground-divider);
+
+        h2 {
+          flex-grow: 1;
+          margin: 0;
+        }
+      }
+      div {
+        display: flex;
+        margin-top: 64px;
+        justify-content: center;
+      }
+      div.contract-list {
+        position: relative;
+        gap: 8px;
+        margin: 0 32px;
+        padding: 32px 0 52px 0;
+        align-items: center;
+        justify-content: start;
+        border-bottom: solid 2px var(--foreground-divider);
+
+        p {
+          margin: 0;
+          flex-grow: 1;
+        }
+        p.amendment {
+          position: absolute;
+          bottom: 26px;
+          color: var(--foreground-divider);
+        }
+      }
+
+      div {
+        button.circle {
+          mat-icon {
+            border: solid 2px;
+            border-radius: 100%;
+          }
+        }
+        button.main-dashboard-cta {
+          mat-icon {
+            border: solid 2px var(--primary);
+            border-radius: 100%;
+          }
+        }
       }
     }
   }
