--- a/libs/waterfall/src/lib/components/g6/graph/graph.component.scss
+++ b/libs/waterfall/src/lib/components/g6/graph/graph.component.scss
@@ -18,6 +18,11 @@ main {
   aside {
     width: 300px;
   }
+  section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 ul {
