--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -49,7 +49,7 @@
     <ng-template filter label="Country of Origin" [form]="searchForm.originCountries">
       <group-multiselect
         scope="territories"
-        label="Select territoties"
+        label="Select territories"
         displayAll="World"
         filterPlaceholder="Specify territories to filter"
         [control]="searchForm.get('originCountries')"
