--- a/libs/contract/src/lib/avails/filter/filter.component.html
+++ b/libs/contract/src/lib/avails/filter/filter.component.html
@@ -1,7 +1,7 @@
   <group-multiselect
     *ngIf="getControl('territories') as territories"
     scope="territories"
-    label="Select Territoties"
+    label="Select Territories"
     displayAll="World"
     filterPlaceholder="Specify territories to filter"
     required
