--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.scss
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.scss
@@ -4,6 +4,13 @@
   margin: 40px;
 }
 
+div {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+  margin-bottom: 4px;
+}
+
 h3 {
   margin-top: 40px;
 }
