--- a/libs/ui/src/lib/list/filter/list-filter.component.html
+++ b/libs/ui/src/lib/list/filter/list-filter.component.html
@@ -1,6 +1,6 @@
 <section>
   <ng-container *ngFor="let filter of filters">
-    <button class="filter mat-body-2" mat-ripple [widgetTarget]="filterWidget" [ngClass]="filter.color$ | async">
+    <button class="filter mat-body-2" mat-ripple [widgetTarget]="filterWidget" [ngClass]="filter.color$ | async" id="filterButton">
       {{filter.label}}
     </button>
     <overlay-widget #filterWidget (openedChanged)="filter.active = $event" overflow="auto">
