--- a/libs/ui/src/lib/static-autocomplete/group/group.component.html
+++ b/libs/ui/src/lib/static-autocomplete/group/group.component.html
@@ -66,7 +66,7 @@
     *ngIf="control.value.length && control.value.length !== items.length"
     mat-icon-button
     type="button"
-    matTooltip="See list"
+    matTooltip="See details"
     (click)="openGroupModal()"
   >
     <mat-icon svgIcon="document"></mat-icon>
