--- a/libs/movie/src/lib/movie/components/request-asking-price/request-asking-price.component.html
+++ b/libs/movie/src/lib/movie/components/request-asking-price/request-asking-price.component.html
@@ -17,15 +17,16 @@
     </group-multiselect>
 
     <group-multiselect
-    scope="medias"
-    label="Select Rights"
-    displayAll="All Rights"
-    filterPlaceholder="Specify right(s) to filter"
-    selectIcon="play_arrow"
-    required
-    requiredMsg="Select at least one Right"
-    hint="Select the rights you are interested in."
-    [control]="form.get('medias')">
+      *ngIf="hasControl('medias')"
+      scope="medias"
+      label="Select Rights"
+      displayAll="All Rights"
+      filterPlaceholder="Specify right(s) to filter"
+      selectIcon="play_arrow"
+      required
+      requiredMsg="Select at least one Right"
+      hint="Select the rights you are interested in."
+      [control]="form.get('medias')">
     </group-multiselect>
 
     <mat-form-field appearance="outline" *ngIf="hasControl('exclusive')">
